[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WarpMQTT2Api"

authors = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" }
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@bitplan.com" }
]
readme = "README.md"
license = "Apache-2.0"

dependencies = [
    # https://pypi.org/project/pylodstorage/
    "pylodstorage>=0.13.2",
]
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

dynamic = ["version", "description"]

[project.urls]
Home = "http://media.bitplan.com/index.php?title=Bitplan-tools"
Documentation = "http://media.bitplan.com/index.php?title=Bitplan-tools"
Source = "git.bitplan.com:/srv/git/source/python/bitplan-tools"

[tool.hatch.version]
path = "warp/__init__.py"

[project.optional-dependencies]
test = []

[tool.hatch.build.targets.wheel]
only-include = ["warp"]

[tool.hatch.build.targets.wheel.sources]
"osprojects" = "warp"


[project.scripts]
warp3 = "warp.warp3:main"



